--- a/index.html
+++ b/index.html
@@ -71,13 +71,24 @@
                     <p class="about-text">We are Team Saiga, a dynamic group comprising Ishraq, Anthony, Sumedha, Aditya, and Grayson. Our mission is to develop a user-friendly website that offers an extensive collection of books for easy access to book enthusiasts. To enhance the reading experience, our website features a unique text extender code, which provides readers with tools to explore and expand their literary horizons. We are excited to bring our diverse skills and passion for technology to create a platform that fosters a love for reading and discovery.
                         <a href="sumedha.html">
                             <button style="border-color: red;">Sumedha</button>
+                            <img src="frontend.jpg" alt="Frontend" width="25%" height="auto">
                         </a>
                         <a href="aditya.html">
                             <button style="border-color: green;">Aditya</button>
+                            <img src="backend.jpg" alt="Backend" width="25%" height="auto">
                         </a>
-                        <button style="border-color: blue;">Ishraq</button>
-                        <button style="border-color: green;">Grayson</button>
-                        <button style="border-color: red;">Anthony</button>
+                        <a href="ishraq.html">
+                            <button style="border-color: blue;">Ishraq</button>
+                            <img src="scrum-master.jpg" alt="Scrum Master" width="25%" height="auto">
+                        </a>
+                        <a href="grayson.html">
+                            <button style="border-color: green;">Grayson</button>
+                            <img src="Back-End+Developer2.jpg" alt="Backend" width="25%" height="auto">
+                        </a>
+                        <a href="anthony.html">
+                            <button style="border-color: red;">Anthony</button>
+                            <img src="frontend2.jpg" alt="Frontend" width="25%" height="auto">
+                        </a>
                     </button>
                     </p>
                 </div>
