--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
                     <img src="https://ca.slack-edge.com/TUDAF53UJ-UURL9JY3E-a4ca6e95f96b-192" alt="about me" class="image-responsive img-circle img-thumbnail center-block">
                     <p class="about-text">We are Team Saiga, a dynamic group comprising Ishraq, Anthony, Sumedha, Aditya, and Grayson. Our mission is to develop a user-friendly website that offers an extensive collection of books for easy access to book enthusiasts. To enhance the reading experience, our website features a unique text extender code, which provides readers with tools to explore and expand their literary horizons. We are excited to bring our diverse skills and passion for technology to create a platform that fosters a love for reading and discovery.
                         <a href="sumedha.html">
-                            <button style="border-color: red;">Sumedha</button>
-                            <img src="frontend.jpg" alt="Frontend" width="25%" height="auto">
-                        </a>
+                            <div>
+                                <h2>Info About Sumedha</h2>
+                                <button style="border-color: red;">Sumedha</button>
+                                <img src="frontend.jpg" alt="Frontend" width="25%" height="auto">
+                            </div>
+                        </a>                        
                         <a href="aditya.html">
                             <button style="border-color: green;">Aditya</button>
                             <img src="backend.jpg" alt="Backend" width="25%" height="auto">
