--- a/Bookinfo.html
+++ b/Bookinfo.html
@@ -1,8 +1,35 @@
 <h1>Hi</h1>
 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car Rental</title>
+    <link rel="stylesheet" href="stylesEverythingElse.css">
+</head>
+
+<body>
+    <!-- Header links -->
+    <div class="content">
+        <header>
+            <nav>
+                <ul>
+                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/index.html">HOME</a></li>
+                    <li><a class="button-link1" target="_blank" rel="noopener" href="https://ths.li/CXry8ak">INSIGNIS GARAGE</a></li>
+                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/about.html">ABOUT</a></li>
+                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+</body>
+</html>
+
 <script>
     document.getElementById("fetchData").addEventListener("click", function () {
-        const url = "http://127.0.0.1:8420/api/book/"; // Replace "car" with "book"
+        const url = "http://127.0.0.1:8008/api/book/"; // Replace "car" with "book"
 
         fetch(url)
             .then(response => response.json())
@@ -17,7 +44,7 @@
                     table.border = "1";
 
                     const headerRow = document.createElement("tr");
-                    ['make', 'model', 'year', 'fuel', 'cylinders'].forEach(key => {
+                    ['author', 'year', 'price', 'genre', 'summary'].forEach(key => {
                         const th = document.createElement("th");
                         th.textContent = key.charAt(0).toUpperCase() + key.slice(1); // Capitalize first letter of keys
                         headerRow.appendChild(th);
@@ -42,6 +69,18 @@
             });
     });
 
+    function getQueryParams() {
+    const params = new URLSearchParams(window.location.search);
+    const bookName = params.get('bookName');
+
+    // Use the parameters as needed
+    console.log(`Book Name: ${bookName}`);
+
+    // You can also update HTML elements with these values
+    document.getElementById('book-name').textContent = `Book: ${bookName}`;
+}
+
+    
     document.getElementById("searchBook").addEventListener("click", function () { // Replace "searchCar" with "searchBook"
         const modelInput = document.getElementById("modelInput").value.toLowerCase();
         const rows = document.querySelectorAll("#bookTable table tr"); // Replace "carTable" with "bookTable"
