--- a/Bookinfo.html
+++ b/Bookinfo.html
@@ -1,31 +1,37 @@
-<h1>Hi</h1>
-
 <!DOCTYPE html>
-<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Rental</title>
-    <link rel="stylesheet" href="stylesEverythingElse.css">
+    <style>
+        /* Aesthetic styling for the title */
+        h1 {
+            text-align: center;
+            font-size: 24px;
+            color: #333;
+        }
+    </style>
 </head>
-
 <body>
-    <!-- Header links -->
-    <div class="content">
-        <header>
-            <nav>
-                <ul>
-                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/index.html">HOME</a></li>
-                    <li><a class="button-link1" target="_blank" rel="noopener" href="https://ths.li/CXry8ak">INSIGNIS GARAGE</a></li>
-                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/about.html">ABOUT</a></li>
-                    <li><a class="button-link1" href="http://127.0.0.1:5500/Car.website/contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
-    </div>
+    <h1>Book Information</h1> <!-- Added title -->
+
+    <button id="fetchDataButton" type="button">Fetch Data</button> <!-- Added "Fetch Data" button -->
+
+    <!-- Your existing code here... -->
+
+    <script>
+        // Your existing JavaScript code...
+
+        // Add an event listener to the "Fetch Data" button
+        document.getElementById("fetchDataButton").addEventListener("click", function () {
+            // Your fetchData code...
+        });
+
+        // Call the function when the page loads
+        // This will auto-fetch data when the page loads
+        document.getElementById("fetchDataButton").click();
+    </script>
 </body>
 </html>
+
 
 <script>
     document.getElementById("fetchData").addEventListener("click", function () {
