--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif
         }
         h2 {
-            color: #333;
+            color: gray;
         }
         .group-info {
             display: flex;
@@ -20,7 +20,7 @@
         }
         .group-info button {
             background-color: #3498db;
-            color: #fff;
+            color: blueviolet;
             border: none;
             padding: 10px 20px;
             border-radius: 5px;
@@ -28,7 +28,7 @@
             font-size: 18px;
         }
         .group-info button:hover {
-            background-color: #2980b9;
+            background-color: orange;
         }
         .group-info img {
             width: 25%;
