--- a/sumedha.html
+++ b/sumedha.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Name</title>
+</head>
+<body style="background-color: blueviolet; color: orange; font-size: 16px; font-family: Arial, sans-serif;">
     <script>
     document.write("My name is Sumedha<br/>")  
     </script>
-</head>
-<body>
     <script>
-    document.write("I am a junior at Del Norte High School and I am in AP Computer Science Principles this year.<br/> I am working on the frontend for the Amazon Book Catalog project.<br/> I like to read in my spare time and this site allows me to read the linked book descriptions and take time to decide which book I want. <br/>")
+    document.write("I am a junior at Del Norte High School and I am in AP Computer Science Principles this year.<br/> I am working on the frontend for the Amazon Book Catalog project.<br/> I like to read in my spare time, and this site allows me to read the linked book descriptions and take time to decide which book I want. <br/>")
     </script>
 </body>    
 </html>
