--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                             <h>Sumedha</h>
                             <button style="border-color: red;">Sumedha</button>
                             <img src="frontend.jpg" alt="Frontend" width="25%" height="auto">
+                            <img src=""
                         </a>
                         <a href="aditya.html">
                             <h>Aditya</h>
