--- a/sumedha.html
+++ b/sumedha.html
@@ -4,10 +4,10 @@
     <title>Sumedha's Page</title>
     <style>
         body {
-            background-color: blueviolet;
-            color: orange;
+            background-color: white;
+            color: red;
             font-size: 16px;
-            font-family: 'Times New Roman', Times, serif,
+            font-family: 'Corsiva', sans-serif;
         }
     </style>
 </head>
