--- a/sumedha.html
+++ b/sumedha.html
@@ -7,7 +7,7 @@
             background-color: white;
             color: red;
             font-size: 16px;
-            font-family: 'Corsiva', sans-serif;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
     </style>
 </head>
