--- a/sumedha.html
+++ b/sumedha.html
@@ -10,6 +10,10 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
     </style>
+           <script>
+            document.write("My name is Sumedha Kamaraju <br/>")  
+            </script>
+    </head>
 </head>
 <body>
     <h1>Sumedha</h1>
